--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@mipmap/loading"
     tools:context=".MainActivity">
 
 
@@ -12,7 +13,6 @@
         android:id="@+id/btn_start_app"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/btn_start_app"
         android:gravity="center"
         android:layout_marginHorizontal="100sp"
         android:layout_marginTop="200sp"
