--- a/app/src/main/res/layout/activity_fish_hunt.xml
+++ b/app/src/main/res/layout/activity_fish_hunt.xml
@@ -5,7 +5,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".FishHuntActivity"
-    android:background="@mipmap/fishtarget">
+    android:background="@color/white"
+    >
+
+    <TextView
+        android:id="@+id/name_of_target"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:width="200dp"
+        android:height="200dp"
+        android:text="@string/app_label"
+        />
 
     <Button
         android:id="@+id/to_menu"
@@ -38,7 +48,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:background="@mipmap/fishtarget"
+        android:background="@color/white"
         android:text="@string/empty_text" />
 
 </RelativeLayout>
