--- a/app/src/main/res/layout/activity_fish_hunt.xml
+++ b/app/src/main/res/layout/activity_fish_hunt.xml
@@ -17,6 +17,16 @@
         android:text="@string/app_label"
         />
 
+    <TextView
+        android:id="@+id/photo_of_target"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:width="200dp"
+        android:height="200dp"
+        android:text="@string/app_label"
+        />
+
     <Button
         android:id="@+id/to_menu"
         android:layout_width="wrap_content"
@@ -31,7 +41,7 @@
         />
 
     <Button
-        android:id="@+id/go_make_foto"
+        android:id="@+id/go_make_photo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -39,7 +49,7 @@
 
         android:background="@color/empty_color"
         android:text="@string/empty_text"
-        android:onClick="go_make_foto"
+        android:onClick="go_make_photo"
         />
 
     <TextView
