--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -6,11 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".CameraActivity">
 
-    <!--<TextView
+    <TextView
         android:id="@+id/some"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView" />-->
+        android:text="TextView" />
     <ImageView
         android:id="@+id/camera_view"
         android:layout_width="wrap_content"
