--- a/app/src/main/res/layout/activity_fish_hunt.xml
+++ b/app/src/main/res/layout/activity_fish_hunt.xml
@@ -1,44 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".FishHuntActivity"
-    android:background="@mipmap/fishtarget">
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:background="@drawable/gameplay">
 
     <Button
-        android:id="@+id/to_menu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:width="400sp"
-        android:height="200sp"
-
-        android:background="@color/empty_color"
-        android:text="@string/empty_text"
-        android:onClick="back_to_menu"
-        />
-
-    <Button
-        android:id="@+id/go_make_foto"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:height="200sp"
-
-        android:background="@color/empty_color"
-        android:text="@string/empty_text"
-        android:onClick="go_make_foto"
-        />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
+        android:layout_width="410dp"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:background="@mipmap/fishtarget"
-        android:text="@string/empty_text" />
+        android:id="@+id/textView"
+        android:layout_alignParentBottom="true"
+        android:textColor="@color/black"
+        android:padding="5dp"
+        android:background="@drawable/row"
+        android:text="@string/empty_text"
+        android:textSize="@android:dimen/notification_large_icon_width"
+        />
+    <Button
+        android:layout_width="150dp"
+        android:layout_height="75dp"
+        android:background="@drawable/row"
+        android:layout_alignParentRight="true"
+        android:textColor="@color/black"
+        android:text="@string/menu"
+        android:textSize="35dp"
 
+        >
+
+    </Button>
 </RelativeLayout>
