--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -1,37 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@mipmap/fotohunt"
-    tools:context=".MainActivity2">
+    android:layout_height="match_parent">
 
+    <ImageView
+        android:id="@+id/background_image_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        android:src="@drawable/game" />
 
     <Button
-        android:id="@+id/btn_exit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/button1"
+        android:layout_width="200dp"
+        android:layout_marginTop="15dp"
+        android:layout_height="50dp"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/roundstyle"
+        android:textColor="#0C0C73"
+        android:text="@string/other"
+        android:textSize="25sp"
+        android:textStyle="bold">
+
+    </Button>
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="300dp"
+        android:layout_height="90dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="730dp"
+        android:background="@drawable/nach"
         android:gravity="center"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:width="200sp"
-        android:height="250sp"
-        android:background="@color/empty_color"
-        android:text="@string/empty_text"
-        android:onClick="go_to_other_games"
-        />
+        android:textColor="#0C0C73"
+        android:text="@string/play"
+        android:textSize="35sp"
+        android:textStyle="bold">
+
+    </Button>
 
     <Button
-        android:id="@+id/btn_start_game"
-        android:layout_width="wrap_content"
+        android:id="@+id/callname"
+        android:layout_width="match_parent"
+        android:layout_height="106dp"
+        android:layout_marginTop="158dp"
+        android:background="@drawable/roundstyle"
+        android:text="@string/call"
+        android:textColor="#0C0C73"
+        android:textSize="60dp">
+
+    </Button>
+
+    <Button
+        android:id="@+id/line"
+        android:layout_width="match_parent"
+        android:layout_height="4dp"
+        android:layout_marginTop="700dp"
+        android:background="@color/white">
+
+    </Button>
+    <TextView
+        android:id="@+id/text_view_id"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:width="200sp"
-        android:height="250sp"
-        android:background="@color/empty_color"
-        android:text="@string/empty_text"
-        android:onClick="go_to_game"
+        android:layout_width="wrap_content"
+        android:layout_marginTop="600dp"
+        android:text="@string/menu"
+        android:textColor="@color/white"
+        android:layout_centerHorizontal="true"
+        android:textSize="50dp"
         />
 </RelativeLayout>
