--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -30,13 +30,14 @@
         android:layout_width="300dp"
         android:layout_height="90dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="730dp"
+        android:layout_alignParentBottom="true"
         android:background="@drawable/nach"
         android:gravity="center"
         android:textColor="#0C0C73"
         android:text="@string/play"
         android:textSize="35sp"
         android:textStyle="bold">
+
 
     </Button>
 
@@ -56,7 +57,8 @@
         android:id="@+id/line"
         android:layout_width="match_parent"
         android:layout_height="4dp"
-        android:layout_marginTop="700dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="100dp"
         android:background="@color/white">
 
     </Button>
@@ -64,7 +66,8 @@
         android:id="@+id/text_view_id"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:layout_marginTop="600dp"
+        android:layout_marginBottom="110dp"
+        android:layout_alignParentBottom="true"
         android:text="@string/menu"
         android:textColor="@color/white"
         android:layout_centerHorizontal="true"
