--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -21,7 +21,7 @@
         android:layout_centerHorizontal="true"
         />
     <Button
-        android:id="@+id/take_foto"
+        android:id="@+id/take_photo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:width="50dp"
