--- a/app/src/main/res/layout/activity_fish_hunt.xml
+++ b/app/src/main/res/layout/activity_fish_hunt.xml
@@ -15,16 +15,35 @@
         android:text="@string/empty_text"
         android:textSize="@android:dimen/notification_large_icon_width"
         />
-    <Button
-        android:layout_width="150dp"
-        android:layout_height="75dp"
-        android:background="@drawable/row"
-        android:layout_alignParentRight="true"
-        android:textColor="@color/black"
-        android:text="@string/menu"
-        android:textSize="35dp"
+        <Button
+            android:layout_width="150dp"
+            android:id="@+id/menu_1"
+            android:layout_height="75dp"
+            android:background="@drawable/row"
+            android:textColor="@color/black"
+            android:layout_alignRight="@+id/textView"
+            android:text="@string/menu"
+            android:textSize="35dp"
 
-        >
+            >
 
-    </Button>
+        </Button>
+        <Button
+            android:layout_width="260dp"
+            android:layout_height="150dp"
+            android:layout_alignRight="@+id/textView"
+            android:background="@drawable/row"
+            android:layout_above="@+id/textView">
+
+        </Button>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/fish"
+            android:layout_alignLeft="@+id/textView"
+            android:textSize="40dp"
+            android:layout_below ="@+id/menu_1"
+            >
+
+        </TextView>
 </RelativeLayout>
