--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -6,27 +6,26 @@
     android:layout_height="match_parent"
     tools:context=".CameraActivity">
 
-    <TextView
+    <Button
         android:id="@+id/some"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:text="TextView" />
-    <ImageView
-        android:id="@+id/camera_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:width="400dp"
-        android:height="400dp"
-        android:background="@color/purple_200"
+        android:text="@string/dodo"
+        android:textColor="@color/black"
+        android:textSize="30dp"
+        android:background="@drawable/roundstyle"
         android:layout_centerHorizontal="true"
         />
     <Button
         android:id="@+id/take_photo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="250dp"
+        android:layout_height="100dp"
+        android:text="@string/foto"
         android:width="50dp"
-        android:height="50dp"
+        android:textSize="35dp"
         android:layout_alignParentBottom="true"
+        android:layout_marginBottom="25dp"
         android:layout_centerHorizontal="true"
+        android:background="@drawable/row"
         />
 </RelativeLayout>
