--- a/app/src/main/res/layout/activity_false.xml
+++ b/app/src/main/res/layout/activity_false.xml
@@ -3,42 +3,46 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="110dp"
-        android:layout_marginBottom="136dp"
-        android:alpha="0.4"
-        android:background="@drawable/round"/>
     <ImageView
-        android:id="@+id/back_2"
+        android:id="@+id/back_3"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:src="@drawable/ok_f" />
+        android:src="@drawable/img" />
     <Button
         android:layout_width="370dp"
         android:layout_height="150dp"
         android:layout_marginTop="15dp"
         android:layout_centerHorizontal="true"
-        android:text="@string/ok"
+        android:text="@string/notf"
         android:id="@+id/good"
         android:textAlignment="center"
         android:textSize="35dp"
-        android:textColor="#013220"
-        android:background="@drawable/nach" />
+        android:textColor="#4a1517"
+        android:background="@drawable/redsc"
+        >
 
+    </Button>
+    <Button
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginBottom="150dp"
+        android:alpha="0.4"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/round">
+
+    </Button>
     <Button
         android:id="@+id/next"
-        android:alpha="0"
         android:layout_width="10dp"
         android:layout_height="10dp"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/good"
-        android:background="@drawable/round"/>
+        android:alpha="0"
+        android:background="@drawable/redsc">
+
+    </Button>
     <Button
         android:layout_width="370dp"
         android:layout_height="100dp"
@@ -49,9 +53,10 @@
         android:textAlignment="center"
         android:textSize="40dp"
         android:layout_alignParentBottom="true"
-        android:textColor="#013220"
-        android:background="@drawable/nach"/>
+        android:textColor="#4a1517"
+        android:background="@drawable/redsc">
 
+    </Button>
     <Button
         android:layout_width="370dp"
         android:layout_height="100dp"
@@ -62,24 +67,28 @@
         android:textAlignment="center"
         android:textSize="40dp"
         android:layout_alignParentBottom="true"
-        android:textColor="#013220"
-        android:background="@drawable/nach"/>
+        android:textColor="#4a1517"
+        android:background="@drawable/redsc">
+
+    </Button>
 
     <ImageView
         android:id="@+id/logo"
-        android:translationZ="90dp"
         android:layout_width="206dp"
         android:layout_height="233dp"
         android:layout_alignParentStart="true"
+        android:translationZ="90dp"
+
+        android:layout_alignParentEnd="true"
 
         android:layout_alignParentBottom="true"
-
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="112dp"
-        android:layout_marginBottom="116dp"
+        android:layout_marginStart="105dp"
+        android:layout_marginEnd="100dp"
+        android:layout_marginBottom="134dp"
         android:width="50dp"
         android:height="50dp"
-        android:background="@drawable/okey"
+        android:background="@drawable/notoke"
         android:gravity="center"
         android:onClick="go_to_2" />
 
