--- a/app/src/main/res/layout/activity_fish_hunt.xml
+++ b/app/src/main/res/layout/activity_fish_hunt.xml
@@ -10,6 +10,45 @@
         android:scaleType="centerCrop"
         android:src="@drawable/gameplay" />
 
+
+
+    <Button
+        android:id="@+id/menu_1"
+        android:layout_width="150dp"
+        android:layout_height="75dp"
+        android:layout_alignRight="@+id/textView"
+        android:background="@drawable/row"
+        android:text="@string/menu"
+        android:textColor="@color/black"
+        android:textSize="35dp"
+        android:onClick="back_to_menu"/>
+
+    <TextView
+        android:id="@+id/name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/menu_1"
+        android:layout_alignLeft="@+id/textView"
+        android:text="@string/fish"
+        android:textSize="40dp"/>
+
+
+    <Button
+        android:id="@+id/description"
+        android:layout_width="260dp"
+        android:layout_height="150dp"
+        android:layout_above="@+id/textView"
+        android:layout_alignRight="@+id/textView"
+        android:background="@drawable/row"/>
+
+    <ImageView
+        android:id="@+id/photo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
+
+
+
     <Button
         android:id="@+id/textView"
         android:layout_width="410dp"
@@ -20,36 +59,6 @@
         android:padding="5dp"
         android:text="@string/empty_text"
         android:textColor="@color/black"
-        android:textSize="@android:dimen/notification_large_icon_width" />
-
-    <Button
-        android:id="@+id/menu_1"
-        android:layout_width="150dp"
-        android:layout_height="75dp"
-        android:layout_alignRight="@+id/textView"
-        android:background="@drawable/row"
-        android:text="@string/menu"
-        android:textColor="@color/black"
-        android:textSize="35dp">
-
-    </Button>
-
-    <Button
-        android:layout_width="260dp"
-        android:layout_height="150dp"
-        android:layout_above="@+id/textView"
-        android:layout_alignRight="@+id/textView"
-        android:background="@drawable/row">
-
-    </Button>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/menu_1"
-        android:layout_alignLeft="@+id/textView"
-        android:text="@string/fish"
-        android:textSize="40dp">
-
-    </TextView>
+        android:textSize="@android:dimen/notification_large_icon_width"
+        android:onClick="go_make_photo"/>
 </RelativeLayout>
