--- a/app/src/main/res/layout/activity_result_ok.xml
+++ b/app/src/main/res/layout/activity_result_ok.xml
@@ -1,15 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ResultOkActivity">
+    android:layout_height="match_parent">
+
     <Button
-        android:id="@+id/go"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="go_to_fish_hunt"
-        />
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="110dp"
+        android:layout_marginBottom="136dp"
+        android:alpha="0.4"
+        android:background="@drawable/round"/>
+    <ImageView
+        android:id="@+id/back_2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        android:src="@drawable/ok_f" />
+    <Button
+        android:layout_width="370dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="15dp"
+        android:layout_centerHorizontal="true"
+        android:text="@string/ok"
+        android:id="@+id/good"
+        android:textAlignment="center"
+        android:textSize="35dp"
+        android:textColor="#013220"
+        android:background="@drawable/nach" />
+
+    <Button
+        android:id="@+id/next"
+        android:alpha="0"
+        android:layout_width="10dp"
+        android:layout_height="10dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/good"
+        android:background="@drawable/round"/>
+    <Button
+        android:layout_width="370dp"
+        android:layout_height="100dp"
+        android:layout_marginBottom="40dp"
+        android:layout_centerHorizontal="true"
+        android:text="@string/ye"
+        android:layout_toLeftOf="@+id/next"
+        android:textAlignment="center"
+        android:textSize="40dp"
+        android:layout_alignParentBottom="true"
+        android:textColor="#013220"
+        android:background="@drawable/nach"/>
+
+    <Button
+        android:layout_width="370dp"
+        android:layout_height="100dp"
+        android:layout_marginBottom="40dp"
+        android:layout_centerHorizontal="true"
+        android:text="@string/no"
+        android:layout_toRightOf ="@+id/next"
+        android:textAlignment="center"
+        android:textSize="40dp"
+        android:layout_alignParentBottom="true"
+        android:textColor="#013220"
+        android:background="@drawable/nach"/>
+
+    <ImageView
+        android:id="@+id/logo"
+        android:translationZ="90dp"
+        android:layout_width="206dp"
+        android:layout_height="233dp"
+        android:layout_alignParentStart="true"
+
+        android:layout_alignParentBottom="true"
+
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="112dp"
+        android:layout_marginBottom="116dp"
+        android:width="50dp"
+        android:height="50dp"
+        android:background="@drawable/okey"
+        android:gravity="center"
+        android:onClick="go_to_2" />
+
 
 </RelativeLayout>
