--- a/app/src/main/res/layout/activity_result_fail.xml
+++ b/app/src/main/res/layout/activity_result_fail.xml
@@ -44,6 +44,7 @@
 
     </Button>
     <Button
+        android:id="@+id/go_fish"
         android:layout_width="370dp"
         android:layout_height="100dp"
         android:layout_marginBottom="40dp"
@@ -54,10 +55,10 @@
         android:textSize="40dp"
         android:layout_alignParentBottom="true"
         android:textColor="#4a1517"
-        android:background="@drawable/redsc">
-
-    </Button>
+        android:background="@drawable/redsc"
+        android:onClick="go_fish"/>
     <Button
+        android:id="@+id/go_menu"
         android:layout_width="370dp"
         android:layout_height="100dp"
         android:layout_marginBottom="40dp"
@@ -68,9 +69,8 @@
         android:textSize="40dp"
         android:layout_alignParentBottom="true"
         android:textColor="#4a1517"
-        android:background="@drawable/redsc">
-
-    </Button>
+        android:background="@drawable/redsc"
+        android:onClick="go_menu"/>
 
     <ImageView
         android:id="@+id/logo"
