--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -6,6 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".CameraActivity">
 
+    <ImageView
+        android:id="@+id/background_image_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        android:src="@drawable/cam" />
+
     <Button
         android:id="@+id/some"
         android:layout_width="200dp"
