--- a/app/src/main/res/drawable/row.xml
+++ b/app/src/main/res/drawable/row.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="55dp" />
     <gradient
-        android:endColor="#ddff"
-        android:startColor="#ffdd" />
-    <stroke android:width="15px" android:color="#0C0C73" />
+        android:endColor="#78dbe2"
+        android:startColor="#d0f4f7" />
+    <stroke android:width="15px" android:color="#0f484d" />
 </shape>
