--- a/app/src/main/res/layout/activity_fish_hunt.xml
+++ b/app/src/main/res/layout/activity_fish_hunt.xml
@@ -16,7 +16,7 @@
         android:layout_height="75dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
-        android:layout_alignRight="@+id/textView"
+        android:layout_alignRight="@+id/take_photo"
         android:background="@drawable/row"
         android:text="@string/menu"
         android:textColor="#0f484d"
@@ -31,21 +31,31 @@
         android:layout_below="@+id/menu_1"
         android:layout_marginTop="20dp"
         android:textColor="@color/white"
-        android:layout_alignLeft="@+id/textView"
+        android:layout_alignLeft="@+id/take_photo"
         android:text="@string/fish"
         android:textSize="40dp"/>
+
+    <ImageView
+        android:id="@+id/photo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:minWidth="300dp"
+        android:minHeight="180dp"
+        android:maxWidth="400dp"
+        android:maxHeight="200dp"
+        android:layout_below="@id/name"/>
 
 
     <Button
         android:id="@+id/description"
         android:layout_width="260dp"
         android:layout_height="150dp"
-        android:layout_above="@+id/textView"
-        android:layout_alignRight="@+id/textView"
+        android:layout_above="@+id/take_photo"
+        android:layout_alignRight="@+id/take_photo"
         android:background="@drawable/row"/>
 
     <Button
-        android:id="@+id/textView"
+        android:id="@+id/take_photo"
         android:layout_width="390dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -54,6 +64,5 @@
         android:padding="5dp"
         android:text="@string/empty_text"
         android:textColor="#0f484d  "
-        android:textSize="@android:dimen/notification_large_icon_width"
-        android:onClick="go_make_photo"/>
+        android:textSize="@android:dimen/notification_large_icon_width"/>
 </RelativeLayout>
