--- a/app/src/main/res/layout/activity_fish_hunt.xml
+++ b/app/src/main/res/layout/activity_fish_hunt.xml
@@ -16,7 +16,7 @@
         android:layout_height="75dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
-        android:layout_alignRight="@+id/take_photo"
+        android:layout_alignRight="@+id/go_photo"
         android:background="@drawable/row"
         android:text="@string/menu"
         android:textColor="#0f484d"
@@ -31,7 +31,7 @@
         android:layout_below="@+id/menu_1"
         android:layout_marginTop="20dp"
         android:textColor="@color/white"
-        android:layout_alignLeft="@+id/take_photo"
+        android:layout_alignLeft="@+id/go_photo"
         android:text="@string/fish"
         android:textSize="40dp"/>
 
@@ -50,12 +50,12 @@
         android:id="@+id/description"
         android:layout_width="260dp"
         android:layout_height="150dp"
-        android:layout_above="@+id/take_photo"
-        android:layout_alignRight="@+id/take_photo"
+        android:layout_above="@+id/go_photo"
+        android:layout_alignRight="@+id/go_photo"
         android:background="@drawable/row"/>
 
     <Button
-        android:id="@+id/take_photo"
+        android:id="@+id/go_photo"
         android:layout_width="390dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -63,6 +63,7 @@
         android:background="@drawable/row"
         android:padding="5dp"
         android:text="@string/empty_text"
-        android:textColor="#0f484d  "
-        android:textSize="@android:dimen/notification_large_icon_width"/>
+        android:textColor="#0f484d"
+        android:textSize="@android:dimen/notification_large_icon_width"
+        android:onClick="go_photo"/>
 </RelativeLayout>
